deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app.kubernetes.io/name: group4-capstone2-eks-cluster-app
        app.kubernetes.io/instance: group4-capstone2-eks-cluster-instance
        app.kubernetes.io/version: '1.0.0'
        app.kubernetes.io/managed-by: kubectl
    name: group4-capstone2-eks-cluster-deployment
spec:
    replicas: 3
    selector:
        matchLabels:
            app: group4-capstone2-eks-cluster-app
    template:
        metadata:
            labels:
                app: group4-capstone2-eks-cluster-app
        spec:
            containers:
              - image: 962804699607.dkr.ecr.us-west-2.amazonaws.com/group4_capstone_ecr_repo:latest
                imagePullPolicy: Always
                name: group4-capstone2-eks-cluster-app
                ports:
                  - containerPort: 8080
