service.yaml
apiVersion: v1
kind: Service
metadata:
    labels:
        app.kubernetes.io/name: group4-capstone2-eks-cluster
        app.kubernetes.io/instance: group4-capstone2-eks-cluster-instance
        app.kubernetes.io/version: "1.0.0"
        app.kubernetes.io/component: backend
        app.kubernetes.io/managed-by: kubectl
    name: group4-capstone2-eks-cluster-service
spec:
    selector:
        app: group4-capstone2-eks-cluster
    type: NodePort
    ports:
      - protocol: TCP
        port: 80
        targetPort: 8080
